tdf#131613 ignore printer change as a trigger for relayout panels

Change-Id: I1956d8ffe7c6967da5751523d774dfe339448d29
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91482
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>